--- a/03_Get_the_Taste.html
+++ b/03_Get_the_Taste.html
@@ -12812,9 +12812,9 @@ o9FohuL/B4KVG0R2V6wIAAAAAElFTkSuQmCC
 </code></pre>
 <p>The image [0] is called the "primary", and it contains the header information only. It doesn't have image data. [1] is the actual image we may be interested in, and named as "SCI". [2] and [3] are the weight and context images, named "WHT" and "CTX". For the detailed explanation for these images, refer to the section 5.4.6.3. of <a href="http://www.stsci.edu/hst/HST_overview/documents/multidrizzle/ch55.html">this document</a>. These are kind of a byproduct after <a href="https://en.wikipedia.org/wiki/Drizzle_(image_processing)">drizzle</a> image reduction.</p>
 <p>The following is an example of doing <code>pick</code> on <code>ginga</code>, and you can see that the object has quite circular shape from the FWHM fitting.</p>
-<p><img src="../HST_Tutorial/M87_ginga.png" alt="M87_ginga"></p>
+<p><img src='HST_Tutorial/M87_ginga.png' width=800></p>
 <ul>
-<li><strong>Question</strong> What is the feature near the center of the elliptical galaxy?</li>
+<li><strong>Question</strong> What is the bar-like feature near the elliptical galaxy? Do you think it is going in to? Or is i out from the galaxy?</li>
 <li><strong>Question</strong> Why do you think the image is slightly "rotated" by default?<ul>
 <li>Hint: look at the top-left panel (small image) of the screenshot</li>
 </ul>
